# BlockChain_Project-in-cpp

./: .gitattributes  .gitignore  .vercelignore  ANIMATIONS_COMPLETE.md  ANIMATION_QUICK_REFERENCE.md  BUILD_FIXES_DOCUMENTATION.md  COMPLETION_CHECKLIST.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  ENHANCEMENTS.md  ENHANCEMENT_SUMMARY.md  FINAL_REPORT.md  OPTIONS_A_B_COMPLETE.md  OPTION_A_COMPLETE.md  OPTION_B_FINAL_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_COMPLETION_OVERVIEW.md  QUICK_START.md  README.md  RESPONSIVENESS_COMPLETE.md  RESPONSIVE_DESIGN_REPORT.md  RUNNING.txt  VISUAL_GUIDE.md  build_and_run.ps1
.github/workflows/: cmake-multi-platform.yml
backend/: CMakeLists.txt
backend/include/: block.h  blockchain.h  crypto.h  transaction.h  wallet.h
backend/src/: block.cpp  blockchain.cpp  crypto.cpp  main.cpp  wallet.cpp
blockchain_project/: Blockchain.cpp  Blockchain.h  CMakeLists.txt  Wallet.cpp  Wallet.h  main.cpp
design-reference/: Blockchainexploererdashboard.html  Transaction &MemePool.html  Walletdashboard&creationpage.html  blockChainview.html  landingPage.html  miningconcole&visualization.html  transactionHistory.html
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/block/[hash]/: page.tsx
frontend/src/app/explorer/: page.tsx
frontend/src/app/mempool/: page.tsx
frontend/src/app/mining/: page.tsx
frontend/src/app/receive/: page.tsx
frontend/src/app/send/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/app/wallet/: page.tsx
frontend/src/components/: BlocksTable.tsx  Card.tsx  Footer.tsx  Header.tsx  Loader.tsx  MobileDrawer.tsx  Navbar.tsx  Skeleton.tsx  StatsStrip.tsx  TransactionsTable.tsx  WalletCard.tsx
frontend/src/lib/: animations.ts  api.ts
frontend/src/utils/: api.ts  storage.ts
nlohmann/: json.hpp
